@@ -1,3 +1,9 @@
+2006-07-21 Jens Tkotz <jens@peino.de> 1.6-svn-b1-j88-UNSTABLE
+
+ * Removed $class param from gInput
+
+ * Little layout changes
+
 2006-07-20 Jens Tkotz <jens@peino.de> 1.6-svn-b1-j87-UNSTABLE
 
  * Change: Splitted Add_URL into "URL" and "from local Server"
